Moves the text of the entry being edited to the top left rather than the center.

--- a/care-corner-mobile/app/src/main/res/layout/journal_editor_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/journal_editor_activity.xml
@@ -55,6 +55,7 @@
         android:inputType="text"
         android:password="false"
         android:singleLine="false"
+        android:gravity="top|left"
         app:layout_constraintBottom_toTopOf="@+id/btnSave"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
