--- a/care-corner-mobile/app/src/main/res/layout/fake_phone_call_menu_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/fake_phone_call_menu_activity.xml
@@ -5,6 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FakePhoneCallMenuActivity">
+    <fragment
+        android:id="@+id/fragment_container"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:navGraph="@navigation/nav_graph"
+        app:defaultNavHost="true"
+
+        />
 
     <TextView
         android:id="@+id/fake_call_header_text"
