--- a/care-corner-mobile/app/src/main/res/values/preloaded_fonts.xml
+++ b/care-corner-mobile/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,7 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/lato</item>
+        <item>@font/open_sans_light</item>
         <item>@font/playfair_display</item>
         <item>@font/playfair_display_bold</item>
     </array>
