--- a/care-corner-mobile/app/src/main/res/layout/fake_phone_call_menu_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/fake_phone_call_menu_activity.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:navGraph="@navigation/nav_graph"
-        app:defaultNavHost="true"
+        app:defaultNavHost="false"
 
         />
 
