--- a/care-corner-mobile/app/src/main/res/navigation/nav_graph.xml
+++ b/care-corner-mobile/app/src/main/res/navigation/nav_graph.xml
@@ -9,9 +9,14 @@
         android:name="com.carecorner.AudioListFragment"
         android:label="fragment_audio_list"
         tools:layout="@layout/fragment_audio_list" />
+
     <fragment
         android:id="@+id/recordFragment"
         android:name="com.carecorner.RecordFragment"
         android:label="fragment_record"
-        tools:layout="@layout/fragment_record" />
+        tools:layout="@layout/fragment_record" >
+        <action
+            android:id="@+id/action_recordFragment_to_audioListFragment2"
+            app:destination="@id/audioListFragment2" />
+    </fragment>
 </navigation>
