--- a/care-corner-mobile/app/src/main/res/navigation/nav_graph.xml
+++ b/care-corner-mobile/app/src/main/res/navigation/nav_graph.xml
@@ -12,7 +12,12 @@
         tools:layout="@layout/fragment_record" >
         <action
             android:id="@+id/action_recordFragment_to_audioListFragment2"
-            app:destination="@id/audioListFragment2" />
+            app:destination="@id/audioListFragment2"
+            app:exitAnim="@anim/fade_out"
+            app:popExitAnim="@anim/slide_out"
+            app:enterAnim="@anim/slide_in"
+            app:popEnterAnim="@anim/fade_in"
+            />
     </fragment>
 
     <fragment
