--- a/care-corner-mobile/app/src/main/res/layout/player_sheet.xml
+++ b/care-corner-mobile/app/src/main/res/layout/player_sheet.xml
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:fontFamily="@font/open_sans_light"
+            android:fontFamily="@font/playfair_display_bold"
             android:paddingTop="24dp"
             android:paddingBottom="24dp"
             android:text="Media Player"
@@ -45,19 +45,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:fontFamily="@font/open_sans_light"
+            android:fontFamily="@font/playfair_display_bold"
             android:paddingTop="24dp"
             android:paddingEnd="24dp"
             android:paddingBottom="24dp"
             android:text="Not Playing"
             android:textAlignment="textEnd"
             android:textColor="@android:color/white"
-            android:textSize="16sp" />
+            android:textSize="18sp" />
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/player_filename"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -81,7 +81,7 @@
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/player_filename"
         app:srcCompat="@drawable/player_play_btn" />
 
     <ImageButton
