First Iterations of seekbar functionality implemented

--- a/care-corner-mobile/app/src/main/res/layout/player_sheet.xml
+++ b/care-corner-mobile/app/src/main/res/layout/player_sheet.xml
@@ -109,6 +109,7 @@
         app:srcCompat="@drawable/player_forward_btn" />
 
     <SeekBar
+        android:id="@+id/player_seekbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="32dp"
