Started abstracting Recording functionality into it's own service. Set up Bound Service and have established communication between client and service

--- a/care-corner-mobile/app/src/main/res/layout/fragment_record.xml
+++ b/care-corner-mobile/app/src/main/res/layout/fragment_record.xml
@@ -34,16 +34,16 @@
         android:layout_marginTop="64dp"
         android:gravity="center_horizontal" />
 
-    <Chronometer
+    <TextView
         android:id="@+id/record_timer"
-        app:layout_constraintTop_toBottomOf="@+id/record_filename"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:fontFamily="@font/playfair_display"
-        android:textSize="64dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        />
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/playfair_display"
+        android:text="Start Text"
+        android:textSize="64dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/record_filename" />
     
     <ImageButton
         android:id="@+id/record_button"
