--- a/care-corner-mobile/app/src/main/res/navigation/nav_graph.xml
+++ b/care-corner-mobile/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/recordFragment">
+    app:startDestination="@id/audioListFragment2">
 
     <fragment
         android:id="@+id/recordFragment"
