Refactoring fix on armed, then set up for panic button xmls

--- a/care-corner-mobile/app/src/main/res/layout/armed_walk_stop.xml
+++ b/care-corner-mobile/app/src/main/res/layout/armed_walk_stop.xml
@@ -20,10 +20,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ArmedWalk" />
+        app:layout_constraintTop_toBottomOf="@+id/ArmedWalkStop" />
 
     <TextView
-        android:id="@+id/ArmedWalk"
+        android:id="@+id/ArmedWalkStop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
