Gussy up the app a bit to match the design preso main menu.

--- a/care-corner-mobile/app/src/main/res/layout/login_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/login_activity.xml
@@ -46,7 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars[0]" />
+        app:srcCompat="@drawable/care_corner_header" />
 
     <Button
         android:id="@+id/btnRegister"
