--- a/care-corner-mobile/app/src/main/res/layout/welcome_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/welcome_activity.xml
@@ -6,26 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".WelcomeActivity">
 
-    <TextView
-        android:id="@+id/CareCornerLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:text="@string/app_name"
-        android:textSize="60sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/btnLoginMenu"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginLeft="112dp"
+        android:layout_marginTop="88dp"
         android:text="@string/login"
-        app:layout_constraintEnd_toEndOf="@+id/CareCornerLogo"
-        app:layout_constraintStart_toStartOf="@+id/CareCornerLogo"
-        app:layout_constraintTop_toBottomOf="@+id/CareCornerLogo" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
         android:id="@+id/btnResources"
@@ -36,4 +26,22 @@
         app:layout_constraintEnd_toEndOf="@+id/btnLoginMenu"
         app:layout_constraintStart_toStartOf="@+id/btnLoginMenu"
         app:layout_constraintTop_toBottomOf="@+id/btnLoginMenu" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="68dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnLoginMenu"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="53dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/care_corner_header"
+        tools:layout_editor_absoluteX="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
