--- a/care-corner-mobile/app/src/main/res/values/colors.xml
+++ b/care-corner-mobile/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="CC_Green">#83CCAF</color>
+    <color name="CC_Red">#E06666</color>
+
+
 </resources>
