--- a/care-corner-mobile/app/src/main/res/drawable/btn_blue_round.xml
+++ b/care-corner-mobile/app/src/main/res/drawable/btn_blue_round.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <stroke android:color="@color/cc_dark_red" android:width="5dp" />
-            <solid android:color="@color/cc_red"/>
+            <stroke android:color="@color/cc_dark_blue" android:width="5dp" />
+            <solid android:color="@color/cc_light_blue"/>
             <size android:width="150dp" android:height="150dp"/>
         </shape>
     </item>
