--- a/care-corner-mobile/app/src/main/res/layout/fragment_panic_deactive.xml
+++ b/care-corner-mobile/app/src/main/res/layout/fragment_panic_deactive.xml
@@ -36,8 +36,8 @@
     <ToggleButton
         android:id="@+id/activate_btn"
         android:layout_width="116dp"
-        android:layout_height="52dp"
-        android:background="@drawable/rounded_red_btn"
+        android:layout_height="116dp"
+        android:background="@drawable/btn_blue_round"
         android:textOff="Activate Panic Mode"
         android:textOn="Deactivate Panic Mode"
         app:layout_constraintBottom_toBottomOf="parent"
