--- a/care-corner-mobile/app/src/main/res/layout/fragment_panic_mode.xml
+++ b/care-corner-mobile/app/src/main/res/layout/fragment_panic_mode.xml
@@ -12,7 +12,7 @@
         android:id="@+id/panic_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment"
+        android:text="@string/panic_btn_text"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,9 +37,9 @@
         android:id="@+id/activate_btn"
         android:layout_width="116dp"
         android:layout_height="116dp"
-        android:background="@drawable/btn_blue_circle"
-        android:textOff="Activate Panic Mode"
-        android:textOn="Deactivate Panic Mode"
+        android:background="@drawable/selector_panic_btn"
+        android:textOff="@string/panic_btn_deactivated"
+        android:textOn="@string/panic_btn_activated"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
