--- a/care-corner-mobile/app/src/main/res/layout/fragment_panic_mode.xml
+++ b/care-corner-mobile/app/src/main/res/layout/fragment_panic_mode.xml
@@ -7,12 +7,24 @@
     tools:context=".PanicFragment">
 
 
-
     <TextView
         android:id="@+id/panic_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/panic_btn_text"
+        android:text="panic_status"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@id/panic_status2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/panic_status2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="panic_status2"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,6 +34,7 @@
         app:layout_constraintVertical_bias="0.168" />
 
     <Chronometer
+        android:id="@+id/panic_timer"
         android:layout_width="157dp"
         android:layout_height="60dp"
         android:layout_marginBottom="52dp"
@@ -29,9 +42,10 @@
         android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/activate_btn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/panic_status"
-        app:layout_constraintVertical_bias="0.409" />
+        app:layout_constraintVertical_bias="0.96" />
 
     <ToggleButton
         android:id="@+id/activate_btn"
