--- a/care-corner-mobile/app/src/main/res/layout/mombot_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/mombot_activity.xml
@@ -8,55 +8,59 @@
 
     <EditText
         android:id="@+id/mombotResponseBox"
-        android:layout_width="245dp"
-        android:layout_height="107dp"
-        android:layout_marginStart="69dp"
-        android:layout_marginLeft="69dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="79dp"
-        android:layout_marginRight="79dp"
-        android:layout_marginBottom="417dp"
+        android:layout_width="0dp"
+        android:layout_height="228dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginLeft="81dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="81dp"
+        android:layout_marginRight="81dp"
+        android:layout_marginBottom="63dp"
         android:gravity="top|start"
         android:hint="@string/mombot_response"
         android:importantForAutofill="no"
-        android:inputType="text"
+        android:inputType="textCapSentences|textMultiLine"
+        android:singleLine="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/MombotEntryBox"
-        android:layout_width="254dp"
-        android:layout_height="102dp"
-        android:layout_marginStart="69dp"
-        android:layout_marginLeft="69dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginRight="70dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="249dp"
+        android:layout_height="228dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginLeft="81dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="81dp"
+        android:layout_marginRight="81dp"
         android:gravity="top|start"
         android:hint="@string/entry_for_mombot"
         android:importantForAutofill="no"
-        android:inputType="text"
+        android:inputType="textCapSentences|textMultiLine"
+        android:singleLine="false"
         app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Mombot" />
+        app:layout_constraintTop_toBottomOf="@+id/Mombot"
+        app:layout_constraintVertical_bias="0.165" />
 
     <Button
         android:id="@+id/btnSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="151dp"
-        android:layout_marginLeft="151dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="152dp"
-        android:layout_marginRight="152dp"
-        android:layout_marginBottom="11dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="150dp"
+        android:layout_marginRight="150dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/submit"
         app:layout_constraintBottom_toTopOf="@+id/mombotResponseBox"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/MombotEntryBox" />
 
@@ -64,15 +68,9 @@
         android:id="@+id/Mombot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="111dp"
-        android:layout_marginLeft="111dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="111dp"
-        android:layout_marginRight="111dp"
-        android:layout_marginBottom="13dp"
         android:text="@string/mombot"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-        app:layout_constraintBottom_toTopOf="@+id/MombotEntryBox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
