--- a/care-corner-mobile/app/src/main/res/layout/safe_walk_menu_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/safe_walk_menu_activity.xml
@@ -86,4 +86,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/safe_call_header_text" />
 
+    <Button
+        android:id="@+id/btnArrived"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="136dp"
+        android:layout_marginLeft="136dp"
+        android:layout_marginTop="88dp"
+        android:text="I've Arrived"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnWalking" />
+
+    <Button
+        android:id="@+id/btnWalking"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="136dp"
+        android:layout_marginLeft="136dp"
+        android:layout_marginTop="84dp"
+        android:text="I'm a walkin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnStartWalk" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
