--- a/care-corner-mobile/app/src/main/res/layout/map_sheet.xml
+++ b/care-corner-mobile/app/src/main/res/layout/map_sheet.xml
@@ -8,13 +8,18 @@
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     app:behavior_hideable="true"
     app:behavior_peekHeight = "70dp"
+    tools:context="com.carecorner.PanicActivity"
     android:id="@+id/map_sheet"
     >
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
+        android:id="@+id/map_linear_layout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content">
+        android:layout_height="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+
 
 
         <ImageView
@@ -36,7 +41,7 @@
             app:srcCompat="@drawable/swipe_up_icon" />
 
         <TextView
-            android:id="@+id/player_header_title"
+            android:id="@+id/map_tile"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="4"
@@ -44,19 +49,22 @@
             android:paddingTop="6dp"
             android:paddingEnd="24dp"
             android:paddingBottom="6dp"
-            android:text="Maaap"
+            android:text="Map"
             android:textAlignment="textEnd"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="wrap_content"
+
+    <com.here.sdk.mapview.MapView
+        android:id="@+id/map_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:srcCompat="@drawable/map_fake_image" />
+        app:layout_constraintTop_toBottomOf="@id/map_linear_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
