Putting main menu xml file back

--- a/care-corner-mobile/app/src/main/res/layout/journal_pin_creation.xml
+++ b/care-corner-mobile/app/src/main/res/layout/journal_pin_creation.xml
@@ -41,7 +41,7 @@
         android:layout_marginTop="44dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="numbers"
+        android:hint="@string/pin"
         android:inputType="numberPassword"
         app:layout_constraintEnd_toEndOf="@+id/txtJournalPassword"
         app:layout_constraintHorizontal_bias="0.0"
