--- a/care-corner-mobile/app/src/main/res/layout/mombot.xml
+++ b/care-corner-mobile/app/src/main/res/layout/mombot.xml
@@ -23,7 +23,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/MombotEntryBox"
