--- a/care-corner-mobile/app/src/main/res/layout/recyclerview_items_view.xml
+++ b/care-corner-mobile/app/src/main/res/layout/recyclerview_items_view.xml
@@ -37,9 +37,9 @@
         android:id="@+id/textViewTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="50dp"
         android:text="TextView"
         app:layout_constraintEnd_toStartOf="@+id/btnDelete2"
-        app:layout_constraintStart_toEndOf="@+id/textView1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -47,10 +47,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="50dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnDelete2"
-        app:layout_constraintStart_toEndOf="@+id/textView1"
         app:layout_constraintTop_toBottomOf="@+id/textViewTime" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
