fix journal login bug

--- a/care-corner-mobile/app/src/main/res/layout/journal_pin_creation.xml
+++ b/care-corner-mobile/app/src/main/res/layout/journal_pin_creation.xml
@@ -11,14 +11,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="140dp"
+        android:autofillHints=""
         android:ems="10"
-        android:hint="@string/UserName"
+        android:hint="@string/userid"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.119"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:autofillHints="" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/txtJournalPassword"
