--- a/care-corner-mobile/app/src/main/res/layout/fragment_panic_deactive.xml
+++ b/care-corner-mobile/app/src/main/res/layout/fragment_panic_deactive.xml
@@ -19,7 +19,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.168" />
+        app:layout_constraintVertical_bias="0.168"
+        android:gravity="center_horizontal" />
 
     <Chronometer
         android:layout_width="157dp"
@@ -31,7 +32,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/panic_status"
-        app:layout_constraintVertical_bias="0.409" />
+        app:layout_constraintVertical_bias="0.409"
+        android:gravity="center_horizontal" />
 
     <ToggleButton
         android:id="@+id/activate_btn"
