Deleted unnecessary files

--- a/care-corner-mobile/app/src/main/res/navigation/panic_nav_graph.xml
+++ b/care-corner-mobile/app/src/main/res/navigation/panic_nav_graph.xml
@@ -7,21 +7,7 @@
 
     <fragment
         android:id="@+id/panicDeactiveFragment"
-        android:name="com.carecorner.PanicFragment"
+        android:name="com.carecorner.PanicModeFragment"
         android:label="fragment_panic_deactive"
-        tools:layout="@layout/fragment_panic_mode" >
-        <action
-            android:id="@+id/action_panicDeactiveFragment_to_panicMapFragment"
-            app:destination="@id/panicMapFragment"
-            app:exitAnim="@anim/fade_out"
-            app:popExitAnim="@anim/slide_out"
-            app:enterAnim="@anim/slide_in"
-            app:popEnterAnim="@anim/fade_in"
-            />
-    </fragment>
-    <fragment
-        android:id="@+id/panicMapFragment"
-        android:name="com.carecorner.PanicMapFragment"
-        android:label="fragment_panic_map"
-        tools:layout="@layout/fragment_panic_map" />
+        tools:layout="@layout/fragment_panic_mode" />
 </navigation>
