--- a/care-corner-mobile/app/src/main/res/layout/fragment_panic_mode.xml
+++ b/care-corner-mobile/app/src/main/res/layout/fragment_panic_mode.xml
@@ -56,8 +56,46 @@
         android:textOn="@string/panic_btn_activated"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.499" />
+
+
+    <LinearLayout
+        android:id="@+id/panic_incident_linear_layout"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activate_btn"
+        app:layout_constraintVertical_bias=".10">
+
+        <ImageButton
+            android:id="@+id/panic_incident_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="67dp"
+            android:backgroundTint="#FFFFFF"
+            android:src="@drawable/incident_icon_50" />
+
+
+        <TextView
+            android:id="@+id/panic_incident_text"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:fontFamily="sans-serif-smallcaps"
+            android:text="Incidents"
+            android:textAlignment="viewStart"
+            android:gravity="center_vertical"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="246dp"
+            tools:layout_editor_absoluteY="470dp" />
+
+
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
