Final touches, journal editor - added multiline so it continues on next line rather than horizontal scroll.

--- a/care-corner-mobile/app/src/main/res/layout/journal_editor_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/journal_editor_activity.xml
@@ -47,7 +47,7 @@
         android:layout_marginRight="25dp"
         android:layout_marginBottom="40dp"
         android:hint="Journal Entry"
-        android:inputType="text"
+        android:inputType="textCapSentences|textMultiLine"
         android:password="false"
         android:singleLine="false"
         android:gravity="top|left"
