Resource location tracker

--- a/care-corner-mobile/app/src/main/res/layout/resource_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/resource_activity.xml
@@ -16,4 +16,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnShelter"
+        android:layout_width="117dp"
+        android:layout_height="82dp"
+        android:layout_marginTop="140dp"
+        android:text="Shelter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.224"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resources" />
+
+    <Button
+        android:id="@+id/btnEducation"
+        android:layout_width="126dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="120dp"
+        android:text="Education"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnShelter"
+        app:layout_constraintVertical_bias="0.1" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
