added title to reporting assistance homepage

--- a/care-corner-mobile/app/src/main/res/layout/reporting_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/reporting_activity.xml
@@ -18,5 +18,20 @@ tools:context=".ReportingActivity">
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="395dp"
+        android:layout_height="98dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginBottom="34dp"
+        android:text="@string/reporting_assistance"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_view2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
